04.11 test fixes in all services, controllers